fix(doc-ui): 修复部分浏览器不支持 text-wrap 的问题

--- a/packages/doc-ui/src/module-install/module-install.module.scss
+++ b/packages/doc-ui/src/module-install/module-install.module.scss
@@ -1,7 +1,7 @@
 .label {
   display: flex;
   align-items: center;
-  text-wrap: nowrap;
+  white-space: nowrap;
 
   .icon {
     width: 1.25em;
